# kekkai

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/quizz/: SKILL.md
.github/workflows/: ci.yml  publish.yml
cmd/dojo/: main.go  main_test.go
internal/agent/: CLAUDE.md  agent_test.go  manager.go  pidfile.go  process.go  process_unix.go  protocol.go  runner.go  types.go
internal/jj/: CLAUDE.md  client.go  diff.go  errors.go  jj_test.go  log.go  ops.go  status.go  workspace.go
internal/tui/: CLAUDE.md  app.go  chat_test.go  chat_view.go  diff_view.go  messages.go  right_pane.go  styles.go  tui_test.go  workspace_list.go
specs/: 0-start.md  1-python.md  4-m5-implem.md
src/kekkai/: cli.py  errors.py  jj.py
tests/: conftest.py  test_cli.py  test_jj.py
