[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kekkai"
version = "0.1.0"
description = "Minimal CLI wrapper that launches Claude Code in isolated jj workspaces"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "yum0e" }
]
keywords = ["jj", "jujutsu", "claude", "agent", "workspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
kekkai = "kekkai.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kekkai"]
